--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,11 @@ footer {
 
 
 /* Basket */
-
 .basket-img {
     max-height: 125px;
+}
+
+/* Checkout */
+.checkout-img {
+    max-height: 50px;
 }
