--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -13,7 +13,7 @@
         <div class="col-11 col-lg-8">
             <!-- Basket Items -->
             {% if basket_items %}
-            <table class="table table-striped rounded align-middle">
+            <table class="table table-striped align-middle">
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">Order Details</th>
