--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -1,42 +1,58 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row content-container justify-content-center g-0 mt-5">
-    <!-- Image -->
-    <div class="col-11 col-md-8 col-lg-4 d-flex justify-content-center m-2 me-md-5 border-gry">
-        <img src="{{ product.image.url }}" alt="product image" class="img-fluid p-2 product-img">
-    </div>
+<div class="content-container mt-5">
+    <div class="row g-0 justify-content-center">
+        <!-- Image -->
+        <div class="col-11 col-md-8 col-lg-4 d-flex justify-content-center m-2 me-md-5 border-gry">
+            <img src="{{ product.image.url }}" alt="product image" class="img-fluid p-2 product-img">
+        </div>
 
-    <!-- Details -->
-    <div class="col-11 col-md-10 col-lg-4 text-center mb-3">
-        <h1>{{ product.name }}</h1>
-        <span class="d-block fs-3 fst-italic">£{{ product.price }}</span>
-        <hr>
-        <span class="d-block mt-3 text-start fw-bold">Description:</span>
-        <p class="text-start">{{ product.content }}</p>
-        <hr>
+        <!-- Details -->
+        <div class="col-11 col-md-10 col-lg-4 text-center mb-3">
+            <h1>{{ product.name }}</h1>
+            <span class="d-block fs-3 fst-italic">£{{ product.price }}</span>
+            <hr>
+            <span class="d-block mt-3 text-start fw-bold">Description:</span>
+            <p class="text-start">{{ product.content }}</p>
+            <hr>
 
-        <!-- User Input Component -->
-        <div class="row g-0 justify-content-center">
-            <div class="col-10 col-md">
-                <form action="{% url 'add_to_basket' product.id %}" method="POST">
-                    {% csrf_token %}
-                    <div class="row justify-content-center">
-                        <div class="col-10 col-md text-md-end">
-                            <label class="col-form-label" for="qty_input_{{ product.id }}">Quantity:</label>
+            <!-- User Input Component -->
+            <div class="row g-0 justify-content-center">
+                <div class="col-10 col-md">
+                    <form action="{% url 'add_to_basket' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row justify-content-center">
+                            <div class="col-10 col-md text-md-end">
+                                <label class="col-form-label" for="qty_input_{{ product.id }}">Quantity:</label>
+                            </div>
+                            <div class="col-10 col-md">
+                                <input name="quantity" type="number" class="form-control" value="1" min="1" max="99"
+                                    id="qty_input_{{ product.id }}">
+                            </div>
+                            <div class="col-10 col-md mt-2 mt-md-0">
+                                <input type="submit" class="btn bg-red btn-outline-dark border-0" value="Add to Basket">
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-                        <div class="col-10 col-md">
-                            <input name="quantity" type="number" class="form-control" value="1" min="1" max="99"
-                                id="qty_input_{{ product.id }}">
-                        </div>
-                        <div class="col-10 col-md mt-2 mt-md-0">
-                            <input type="submit" class="btn bg-red btn-outline-dark border-0" value="Add to Basket">
-                        </div>
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Messages -->
+    {% if messages %}
+    {% for message in messages %}
+    <div class="row g-0 justify-content-center mt-2">
+        <div class="col-10 col-md-6">
+            <div class="alert alert-dismissible fade show alert-{{ message.tags }}">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
 </div>
 {% endblock content %}
