--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<!-- Messages -->
+{% if messages %}
+{% for message in messages %}
+<div class="row g-0 justify-content-center position-absolute w-100 mt-2">
+    <div class="col-10 col-md-6">
+        <div class="alert alert-dismissible fade show alert-{{ message.tags }}">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% endif %}
+
 <div class="epic-cont d-flex align-items-center justify-content-center">
     <a href="{% url 'products' %}" type="button" class="btn btn-dark fs-1 hvr-float">Shop Now</a>
 </div>
