--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -5,6 +5,20 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
+<!-- Messages -->
+{% if messages %}
+{% for message in messages %}
+<div class="row g-0 justify-content-center mt-2">
+    <div class="col-10 col-md-6">
+        <div class="alert alert-dismissible fade show alert-{{ message.tags }}">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% endif %}
+
 <div class="row justify-content-center g-0 content-container mt-3">
     <div class="col-11 col-md-6 text-center">
         <h1>{% trans "Verify Your E-mail Address" %}</h1>
