--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="account-dropdown">
                         {% if request.user.is_authenticated %}
+                        <li class="dropdown-item">Logged in as {{ request.user }}</li>
                         <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         {% else %}
                         <li><a class="dropdown-item" href="{% url 'account_login' %}">Log In</a></li>
