--- a/templates/base.html
+++ b/templates/base.html
@@ -116,8 +116,8 @@
 
                     <!-- Search -->
                     <form method="GET" action="{% url 'products' %}" class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                            name="q">
+                        <input class="form-control me-2" type="search" placeholder="Search (50 char max)"
+                            aria-label="Search" name="q" maxlength="50">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
                 </div>
