--- a/templates/base.html
+++ b/templates/base.html
@@ -135,38 +135,55 @@
             </div>
         </nav>
 
-        <div id="mc_embed_signup">
-            <form
-                action="https://gmail.us14.list-manage.com/subscribe/post?u=b34b26f47dbf44f6775299463&amp;id=af326e0e73"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                    <h2>Sign up to our newsletter</h2>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                    <div class="mc-field-group">
-                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-                        </label>
-                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+        <!-- Mailchimp Modal -->
+        <div class="modal fade" id="mc-modal" tabindex="-1" aria-labelledby="mc-modal-label" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="mc-modal-label">Sign up to our newsletter</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div id="mce-responses" class="clear foot">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                            name="b_b34b26f47dbf44f6775299463_af326e0e73" tabindex="-1" value=""></div>
-                    <div class="optionalParent">
-                        <div class="clear foot">
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                                class="button">
-                            <p class="brandingLogo"><a href="http://eepurl.com/h0c359"
-                                    title="Mailchimp - email marketing made easy and fun"><img
-                                        src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
-                            </p>
+                    <div class="modal-body">
+                        <div id="mc_embed_signup">
+                            <form
+                                action="https://gmail.us14.list-manage.com/subscribe/post?u=b34b26f47dbf44f6775299463&amp;id=af326e0e73"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
+                                    <div class="indicates-required"><span class="asterisk">*</span> indicates required
+                                    </div>
+                                    <div class="mc-field-group">
+                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                                        </label>
+                                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                                    </div>
+                                    <div id="mce-responses" class="clear foot">
+                                        <div class="response" id="mce-error-response" style="display:none"></div>
+                                        <div class="response" id="mce-success-response" style="display:none"></div>
+                                    </div>
+                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
+                                            type="text" name="b_b34b26f47dbf44f6775299463_af326e0e73" tabindex="-1"
+                                            value=""></div>
+                                    <div class="optionalParent">
+                                        <div class="clear foot">
+                                            <input type="submit" value="Subscribe" name="subscribe"
+                                                id="mc-embedded-subscribe" class="button">
+                                            <p class="brandingLogo"><a href="http://eepurl.com/h0c359"
+                                                    title="Mailchimp - email marketing made easy and fun"><img
+                                                        src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
 
         <!-- Page Content -->
@@ -175,17 +192,22 @@
 
         <!-- Footer -->
         <footer class="fixed-bottom bg-red text-center">
-            <ul id="ftr-socials" class="list-inline fs-2">
-                <li class="list-inline-item"><a href="https://www.facebook.com/" target="_blank"><i
+            <ul id="ftr-socials" class="list-inline fs-2 d-inline">
+                <li class="list-inline-item align-middle"><a href="https://www.facebook.com/" target="_blank"><i
                             class="fab fa-facebook-f text-dark"></i></a></li>
-                <li class="list-inline-item"><a href="https://www.instagram.com/" target="_blank"><i
+                <li class="list-inline-item align-middle"><a href="https://www.instagram.com/" target="_blank"><i
                             class="fab fa-instagram text-dark"></i></a></li>
-                <li class="list-inline-item"><a href="https://twitter.com/" target="_blank"><i
+                <li class="list-inline-item align-middle"><a href="https://twitter.com/" target="_blank"><i
                             class="fab fa-twitter text-dark"></i></a>
                 </li>
             </ul>
             <ul class="list-inline text-white">
                 <li class="list-inline-item"><a href="#" class="text-decoration-none text-white">Contact Us</a> |</li>
+                <li class="list-inline-item align-bottom"><button
+                        class="btn btn-link text-decoration-none text-white p-0 border-0 shadow-none"
+                        data-bs-toggle="modal" data-bs-target="#mc-modal">Subscribe
+                        |</button>
+                </li>
                 <li class="list-inline-item">TH, Henge Road, TH3 7GF |</li>
                 <li class="list-inline-item">&copy;Tone Henge</li>
             </ul>
