Add rel=nofollow to 3rd party links

--- a/templates/base.html
+++ b/templates/base.html
@@ -193,12 +193,12 @@
         <!-- Footer -->
         <footer class="fixed-bottom bg-red text-center">
             <ul id="ftr-socials" class="list-inline fs-2 d-inline">
-                <li class="list-inline-item align-middle"><a href="https://www.facebook.com/" target="_blank"><i
-                            class="fab fa-facebook-f text-dark"></i></a></li>
-                <li class="list-inline-item align-middle"><a href="https://www.instagram.com/" target="_blank"><i
-                            class="fab fa-instagram text-dark"></i></a></li>
-                <li class="list-inline-item align-middle"><a href="https://twitter.com/" target="_blank"><i
-                            class="fab fa-twitter text-dark"></i></a>
+                <li class="list-inline-item align-middle"><a href="https://www.facebook.com/" target="_blank"
+                        rel="nofollow"><i class="fab fa-facebook-f text-dark"></i></a></li>
+                <li class="list-inline-item align-middle"><a href="https://www.instagram.com/" target="_blank"
+                        rel="nofollow"><i class="fab fa-instagram text-dark"></i></a></li>
+                <li class="list-inline-item align-middle"><a href="https://twitter.com/" target="_blank"
+                        rel="nofollow"><i class="fab fa-twitter text-dark"></i></a>
                 </li>
             </ul>
             <ul class="list-inline text-white">
