--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Online musical instrument retailer">
+    <meta name="keywords" content="guitar, bass, guitar amplifier, amplifier, musical instrument, instrument">
+    <meta name="author" content="Jacob Shortall">
+
     <title>Tone Henge</title>
 
     <!-- CSS Files -->
