--- a/templates/base.html
+++ b/templates/base.html
@@ -206,7 +206,8 @@
                 </li>
             </ul>
             <ul class="list-inline text-white">
-                <li class="list-inline-item"><a href="#" class="text-decoration-none text-white">Contact Us</a> |</li>
+                <li class="list-inline-item"><a href="{% url 'contact' %}"
+                        class="text-decoration-none text-white">Contact Us</a> |</li>
                 <li class="list-inline-item align-bottom"><button
                         class="btn btn-link text-decoration-none text-white p-0 border-0 shadow-none"
                         data-bs-toggle="modal" data-bs-target="#mc-modal">Subscribe
