--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -9,9 +9,14 @@
         </div>
     </div>
 
-    <div class="row g-0 justify-content-center">
+    <div class="row g-0 justify-content-center mt-2">
         <div class="col-10 col-md-8 col-lg-6">
-            <!-- form goes here -->
+            <form action="" method="POST">
+                {{ form.as_p }}
+                <div class="text-center">
+                    <button class="btn bg-red btn-outline-dark border-0 text-white" type="submit">Submit Query</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
