--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -9,9 +9,24 @@
         </div>
     </div>
 
+    <!-- Messages -->
+    {% if messages %}
+    {% for message in messages %}
+    <div class="row g-0 justify-content-center mt-2">
+        <div class="col-10 col-md-6">
+            <div class="alert alert-dismissible fade show alert-{{ message.tags }}">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+
     <div class="row g-0 justify-content-center mt-2">
         <div class="col-10 col-md-8 col-lg-6">
             <form action="" method="POST">
+                {% csrf_token %}
                 {{ form.as_p }}
                 <div class="text-center">
                     <button class="btn bg-red btn-outline-dark border-0 text-white" type="submit">Submit Query</button>
