--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="content-container">
+<div class="content-container mb-2">
     <div class="row g-0 justify-content-center mt-2">
         <div class="col-10 col-md-8 col-lg-6 text-center">
             <h1>Any Queries?</h1>
