--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -54,5 +54,36 @@
     </div>
     {% endfor %}
     {% endif %}
+
+    <!-- Comments -->
+    <div class="row g-0 justify-content-center">
+        <div class="col-10 col-md-8 col-lg-6 text-md-center">
+            <div class="d-flex justify-content-between align-items-center">
+                <h2 class="d-inline me-3">Comments</h2>
+                <button class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#comment-modal"><i
+                        class="fas fa-plus"></i></button>
+            </div>
+            <hr>
+        </div>
+    </div>
+
+    <!-- Comment Modal -->
+    <div class="modal fade" id="comment-modal" tabindex="-1" aria-labelledby="comment-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="comment-modal-label">Add comment...</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- form goes here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn bg-red btn-outline-dark border-0 text-white">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
