--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -56,7 +56,7 @@
     {% endif %}
 
     <!-- Comments -->
-    <div class="row g-0 justify-content-center">
+    <div class="row g-0 justify-content-center mt-2">
         <div class="col-10 col-md-8 col-lg-6 text-md-center">
             <div class="d-flex justify-content-between align-items-center">
                 <h2 class="d-inline me-3">Comments</h2>
@@ -75,13 +75,16 @@
                     <h5 class="modal-title" id="comment-modal-label">Add comment...</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <!-- form goes here -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn bg-red btn-outline-dark border-0 text-white">Add</button>
-                </div>
+                <form class="form" action="" method="POST">
+                    <div class="modal-body">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn bg-red btn-outline-dark border-0 text-white">Add</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
