Ensure only comments for specific product are rendered

--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    {% for comment in comments %}
+    {% for comment in product.comments.all %}
     <div class="row g-0 justify-content-center">
         <div class="col-10 col-md-8 col-lg-6">
             <div class="bg-dark p-2 rounded text-white">
