--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -88,7 +88,7 @@
                     <h5 class="modal-title" id="comment-modal-label">Add comment...</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form class="form" action="" method="POST">
+                <form class="form" action="{% url 'add_comment' product.id %}" method="POST">
                     <div class="modal-body">
                         {% csrf_token %}
                         {{ form.as_p }}
