--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -60,8 +60,12 @@
         <div class="col-10 col-md-8 col-lg-6 text-md-center">
             <div class="d-flex justify-content-between align-items-center">
                 <h2 class="d-inline me-3">Comments</h2>
+                {% if user.is_authenticated %}
                 <button class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#comment-modal"><i
                         class="fas fa-plus"></i></button>
+                {% else %}
+                <span>Please <a href="{% url 'account_login' %}">sign in</a> to comment.</span>
+                {% endif %}
             </div>
             <hr>
         </div>
@@ -80,6 +84,7 @@
     </div>
     {% endfor %}
 
+    {% if user.is_authenticated %}
     <!-- Comment Modal -->
     <div class="modal fade" id="comment-modal" tabindex="-1" aria-labelledby="comment-modal-label" aria-hidden="true">
         <div class="modal-dialog">
@@ -101,5 +106,6 @@
             </div>
         </div>
     </div>
+    {% endif %}
 </div>
 {% endblock content %}
