--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -85,10 +85,38 @@
                     <span class="fst-italic">by {{ comment.author }} - {{ comment.date }}</span>
                 </div>
 
+                <!-- Editing/Deleting Comments -->
                 {% if user == comment.author %}
                 <div class="col text-end">
                     <a href="#" class="me-1 text-white"><i class="fas fa-edit"></i></a>
-                    <a href="#" class="text-white"><i class="fas fa-trash"></i></a>
+                    <i class="fas fa-trash" data-bs-toggle="modal"
+                        data-bs-target="#comment-delete-{{ comment.id }}"></i>
+                </div>
+
+                <!-- Comment Delete Modal -->
+                <div class="modal fade text-dark" id="comment-delete-{{ comment.id }}" tabindex="-1"
+                    aria-labelledby="comment-delete-label-{{ comment.id }}" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="comment-delete-label-{{ comment.id }}">Delete comment?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this comment?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary border-0"
+                                    data-bs-dismiss="modal">Close</button>
+                                <form action="{% url 'delete_comment' comment.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <button type="submit"
+                                        class="btn bg-red btn-outline-dark border-0 text-white">Delete</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 {% endif %}
             </div>
