Initialise wishlist app

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                     <ul class="dropdown-menu" aria-labelledby="account-dropdown">
                         {% if request.user.is_authenticated %}
                         <li class="dropdown-item" id="user-status">Logged in as {{ request.user }}</li>
+                        <li><a class="dropdown-item" href="{% url 'wishlist' %}">Wishlist</a></li>
                         <li><a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a></li>
                         {% else %}
                         <li><a class="dropdown-item" href="{% url 'account_login' %}">Log In</a></li>
