--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -13,12 +13,19 @@
             <h1>{{ product.name }}</h1>
             <span class=" fs-3 fst-italic">£{{ product.price }}</span>
 
-            <!-- Add to Wishlist -->
+            <!-- Add to/Remove from Wishlist -->
             {% if user.is_authenticated %}
+            {% if on_wishlist %}
+            <form action="" method="POST" class="text-end">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-sm btn-outline-dark">Remove from Wishlist</button>
+            </form>
+            {% else %}
             <form action="{% url 'add_to_wishlist' product.id %}" method="POST" class="text-end">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-sm btn-outline-dark">Add to wishlist</button>
+                <button type="submit" class="btn btn-sm btn-outline-dark">Add to Wishlist</button>
             </form>
+            {% endif %}
             {% endif %}
 
             <hr>
