--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="content-container">
-    <div class="row g-0 justify-content-center mt-3">
+    <div class="row g-0 justify-content-center mt-3 mb-2">
         <div class="col-10 col-md-9 col-lg-7 text-center">
             <h1>Your Wishlist</h1>
             <hr>
