--- a/products/templates/products/product_view.html
+++ b/products/templates/products/product_view.html
@@ -19,6 +19,7 @@
             <form action="{% url 'remove_from_wishlist' product.id %}" method="POST" class="text-end">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-sm btn-outline-dark">Remove from Wishlist</button>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </form>
             {% else %}
             <form action="{% url 'add_to_wishlist' product.id %}" method="POST" class="text-end">
