--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,8 +6,7 @@
     <div class="row g-0 justify-content-center mt-3">
         <div class="col-10">
             <h1>Thank you for your order.</h1>
-            <p>Review your order details below. A confirmation email has been sent to
-                <strong>{{ order.email }}</strong>.</p>
+            <p>Review your order details below.</p>
             <hr>
             <p>Your order number: <strong>{{ order.order_id }}</strong></p>
             <hr>
