--- a/contact/templates/contact/view_queries.html
+++ b/contact/templates/contact/view_queries.html
@@ -3,11 +3,38 @@
 {% block content %}
 
 <div class="content-container">
-    <div class="row g-0 justify-content-center">
-        <div class="col-10 col-md-8">
-            <h1>Test render</h1>
+    <div class="row g-0 justify-content-center mb-2 mt-3">
+        <div class="col-10 col-md-8 text-center">
+            <h1>Customer Queries</h1>
+            <h2 class="fs-3">Below are questions from our customers.</h2>
         </div>
     </div>
+
+    {% for query in queries %}
+    <div class="row g-0 justify-content-center">
+        <div class="col-10 col-md-8 col-lg-6 bg-dark p-2 rounded text-white">
+
+            <div class="row g-0">
+                <div class="col-10">
+                    <p class="text-break">User Query: "{{ query.query }}"</p>
+                </div>
+            </div>
+
+            <div class="row g-0">
+                <div class="col-8">
+                    <span class="fst-italic text-break">Contact: {{ query.email }}</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row g-0 justify-content-center">
+        <div class="col-10 col-md-8 col-lg-6">
+            <hr>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 
 {% endblock content %}
