Fix HTML validation issues with home page#

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,6 +17,6 @@
 {% endif %}
 
 <div class="epic-cont d-flex align-items-center justify-content-center">
-    <a href="{% url 'products' %}" type="button" class="btn btn-dark fs-1 hvr-float">Shop Now</a>
+    <a href="{% url 'products' %}" class="btn btn-dark fs-1 hvr-float">Shop Now</a>
 </div>
 {% endblock content %}
