--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                 <!-- Account Dropdown -->
                 <div class="dropdown">
                     <div class="btn me-4 text-center mt-2" id="account-dropdown" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                        aria-expanded="false" role="menu">
                         <i class="fas fa-user-circle fs-4"></i>
                         <span class="d-block">Account</span>
                     </div>
@@ -179,7 +179,8 @@
                                                 id="mc-embedded-subscribe" class="button">
                                             <p class="brandingLogo"><a href="http://eepurl.com/h0c359"
                                                     title="Mailchimp - email marketing made easy and fun"><img
-                                                        src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                                                        src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"
+                                                        alt="mailchimp logo"></a>
                                             </p>
                                         </div>
                                     </div>
