--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -25,7 +25,7 @@
 
     <div class="row g-0 justify-content-center mt-2">
         <div class="col-10 col-md-8 col-lg-6">
-            <form action="" method="POST">
+            <form action="{% url 'contact' %}" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <div class="text-center">
